@@ -17,6 +17,10 @@
  * viewport info cache size  (TODO)
  * mouse panning with SDL  (TODO)
  * `make fim' eliminated (TODO: r632)
+ * experimental JPEG-2000 support via JasPer (TODO: r660)
+ * exiftool interface (TODO: r654)
+ * customizable SDL window caption line (TODO: r648)
+ * customizable status line (TODO: r644,r651)
 
                 Version 0.4
 
